src/thirdparty/requirejs/tests/error/d.js
define(['b'], function (b) {
    return {
       name: 'd',
       b: b
    };
});

